--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <ul>
         <li>Date: Saturday 5th July 2025</li>
         <li>Time: 7:00pm</li>
-        <li>Location: Essington Working Mens Club WV11 2DW</li>
+        <li>Location: High Hill Essington Working Mens Club WV11 2DW</li>
     </ul>
 
     <h2>Tickets</h2>
