--- a/index.html
+++ b/index.html
@@ -36,5 +36,8 @@
         
     <p>We have secured Essington Working Men's Club as our venue for Saturday 5th July at 7pm. The costing for tickets will be £25 a person, this will include entertainment and food. We would also like to offer this out to your partners/friend to raise as much as possible (please be aware this will be an over 18s event). </p>
     
+    <h2>About the charities</h2>
+    <p><strong>Teenage Cancer Trust</strong> is dedicated to improving the lives of young people with cancer, providing them with specialized care and support.</p>
+    <p><strong>St Giles Hospice</strong> offers care and support to people with life-limiting illnesses, helping them to live well and die with dignity.</p>
 </body>
 </html>
