--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>Summer Charity Ball Fundraiser Page</title>
 </head>
 <body>
+    <header>
+        <img src="images/school-logo.png" alt="aldridge school logo" style="width: 150px; height: auto;">
     <h1>Welcome to the Summer Charity Ball Fundraiser</h1>
     <p>Join us for an evening of fun, food, and fundraising!</p>
-    
+</header>
     <h2>Event Details</h2>
     <ul>
         <li>Date: Saturday 5th July 2025</li>
