--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Summer Charity Ball Fundraiser Page</title>
+    <style>
+        body {
+            background-image: url('images/360_F_1455329074_hZifEvga8lbFl4lpccCFGYZcHZD7LpRW.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            margin: 0;
+            padding: 0;
+        }
+    </style>
 </head>
 <body>
     <header>
         <img src="images/school-logo.png" alt="aldridge school logo" style="width: 150px; height: auto;">
-    <h1>Welcome to the Summer Charity Ball Fundraiser</h1>
-    <p>Join us for an evening of fun, food, and fundraising!</p>
-</header>
-    <h2>Event Details</h2>
-    <ul>
-        <li>Date: Saturday 5th July 2025</li>
-        <li>Time: 7:00pm</li>
-        <li>Location: High Hill Essington Working Mens Club WV11 2DW</li>
-    </ul>
 
     <h2>Tickets</h2>
     <p>Tickets are were sold by the SEN department and all payments were done via cash </p>
