--- a/index.html
+++ b/index.html
@@ -14,7 +14,18 @@
 
     <section class="donate">
         <h2>Cant attend the ball </h2>
-        
+        <a href=""></a>
     </section>
+
+    <section id="game-section">
+        <h2>Memory match game ❤️</h2>
+        <p>Match the charity logos and spread awareness </p>
+        <section class="game-board" id="game-board"></section>
+        <p id="message" class="win-message"></p>
+    </section>
+    <footer>
+        <p>Every penny helps. Thank you for supporting our SEN departments cause</p>
+    </footer>
+    <script src="game.js"></script>
 </body>
 </html>
